<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>
        <androidx.cardview.widget.CardView
                android:layout_marginTop="48dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_viewe"
                android:elevation="3dp"
                android:layout_gravity="center"
                app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_viewe">


                <Button
                        android:id="@+id/mCameraButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_button"
                        android:padding="13dp"
                        android:text="@string/buttonTakePhoto"
                        android:textColor="#FFFFFF"
                        app:layout_constraintBottom_toTopOf="@+id/mResultTextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.873"
                        app:layout_constraintStart_toEndOf="@+id/mGalleryButton"
                        app:layout_constraintTop_toBottomOf="@+id/mPhotoImageView" />

                <Button
                        android:id="@+id/mGalleryButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:background="@drawable/custom_button"
                        android:padding="13dp"
                        android:text="@string/buttonSelectPhoto"
                        android:textColor="#FFFFFF"
                        app:layout_constraintBottom_toTopOf="@+id/mResultTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mPhotoImageView" />

                <ImageView
                        android:id="@+id/mPhotoImageView"
                        android:layout_width="270dp"
                        android:layout_height="290dp"
                        android:layout_marginTop="78dp"
                        android:background="@drawable/img_v"
                        android:contentDescription="@string/descriptionImage"
                        android:scaleType="fitXY"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/automn" />

                <Button
                        android:id="@+id/mDetectButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/custom_button2"
                        android:padding="13dp"
                        android:text="@string/buttonDiagnose"
                        android:textColor="#FFFFFF"
                        app:layout_constraintBottom_toTopOf="@+id/mResultTextView"
                        app:layout_constraintEnd_toStartOf="@+id/mCameraButton"
                        app:layout_constraintHorizontal_bias="0.52"
                        app:layout_constraintStart_toEndOf="@+id/mGalleryButton"
                        app:layout_constraintTop_toBottomOf="@+id/mPhotoImageView"
                        app:layout_constraintVertical_bias="0.352" />

                <TextView
                        android:id="@+id/mResultTextView"
                        android:layout_width="301dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="136dp"
                        android:shadowColor="@android:color/black"
                        android:text="@string/defaultImage"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mPhotoImageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <me.ibrahimsn.lib.SmoothBottomBar
                    android:id="@+id/bottom_nav"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:paddingTop="2dp"
                    app:iconSize="25dp"
                    app:textSize="16sp"
                    android:layout_gravity="bottom"
                    android:elevation="16dp"
                    android:padding="8dp"
                    app:backgroundColor="@color/colorPrimary"
                    app:menu="@menu/newmenu"
                    android:layout_alignParentBottom="true"/>
        </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>